Changing folders and adding Action
* fixing assets
* Adding Release Github Action

--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -4,4 +4,4 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assetss/500x500.png"
+  image_path: "assets/500x500.png"
