--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assetss/500x500.png
+    - assets/500x500.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
