--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "webview_part2",
-    "short_name": "webview_part2",
+    "name": "Bimbala",
+    "short_name": "Bimbala",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Keeping us mobile.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
