--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(webview_part2 LANGUAGES CXX)
+project(Bimbala LANGUAGES CXX)
 
-set(BINARY_NAME "webview_part2")
+set(BINARY_NAME "Bimbala")
 
 cmake_policy(SET CMP0063 NEW)
 
