--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: Release
 on:
-  release:
-    types: [published]
-    jobs:
+  push:
+    branches:
+      - master
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+*
   release:
     name: Test, build and release
     runs-on: ubuntu-latest
