--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
       - master
     tags:
       - v[0-9]+.[0-9]+.[0-9]+*
+jobs:
   release:
     name: Test, build and release
     runs-on: ubuntu-latest
