--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,23 +10,15 @@ jobs:
     name: Test, build and release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v1
-        with:
-          channel: beta
-      - name: Flutter version
-        run: flutter --version
-      - name: Cache pub dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.FLUTTER_HOME }}/.pub-cache
-          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: ${{ runner.os }}-pub-
-      - name: Download pub dependencies
-        run: flutter pub get
-      - name: Run analyzer
-        run: flutter analyze
-      - name: Run tests
-        run: flutter test
+- uses: actions/checkout@v2
+- uses: actions/setup-java@v2
+  with:
+    distribution: 'zulu'
+    java-version: '11'
+- uses: subosito/flutter-action@v2
+  with:
+    flutter-version: '2.5.3'
+- run: flutter pub get
+- run: flutter test
+- run: flutter build apk
+- run: flutter build appbundle
