--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,27 +6,49 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+*
 jobs:
-  release:
-    name: Test, build and release
+  flutter_test:
+    name: Run flutter test and analyze
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
-          channel: beta
-      - name: Flutter version
-        run: flutter --version
-      - name: Cache pub dependencies
-        uses: actions/cache@v2
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
         with:
-          path: ${{ env.FLUTTER_HOME }}/.pub-cache
-          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: ${{ runner.os }}-pub-
-      - name: Download pub dependencies
-        run: flutter pub get
-      - name: Run analyzer
-        run: flutter analyze
-      - name: Run tests
-        run: flutter test
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter analyze
+      - run: flutter test
+
+  build_ios:
+    name: Build Flutter (iOS)
+    needs: [flutter_test]
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build ios --release --no-codesign
+
+  build_appbundle:
+    name: Build Flutter (Android)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build appbundle
