--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Bimbala
+name: bimbala
 description: Keeping us mobile.
 
 # The following line prevents the package from being accidentally published to
