--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,55 +1,36 @@
-name: Release
 on:
+  pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
-    tags:
+  tags:
       - v[0-9]+.[0-9]+.[0-9]+*
+name: "Build & Release"
 jobs:
-  flutter_test:
-    name: Run flutter test and analyze
-    runs-on: ubuntu-latest
+  build:
+    name: Build & Release
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
-          java-version: "12.x"
+          java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          flutter-version: '2.2.0'
       - run: flutter pub get
-
-#   build_ios:
-#     name: Build Flutter (iOS)
-#     needs: [flutter_test]
-#     runs-on: macos-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions/setup-java@v1
-#         with:
-#           java-version: "12.x"
-#       - uses: subosito/flutter-action@v1
-#         with:
-#           channel: "stable"
-#       - run: flutter pub get
-#       - run: flutter clean
-#       - run: flutter build ios --release --no-codesign
-
-  build_appbundle:
-    name: Build Flutter (Android)
-    needs: [flutter_test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v1
-        with:
-          channel: "stable"
-      - run: flutter pub get
-      - run: flutter clean
-      - run: flutter build appbundle
+#      - run: flutter test
+      - run: flutter build apk --debug --split-per-abi
+      - run: |
+          flutter build ios --no-codesign
+          cd build/ios/iphoneos
+          mkdir Payload
+          cd Payload
+          ln -s ../Runner.app
+          cd ..
+          zip -r app.ipa Payload
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
