--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
+name: Release
 on:
   push:
     branches:
       - master
-  tags:
+    tags:
       - v[0-9]+.[0-9]+.[0-9]+*
-name: "Build & Release"
 jobs:
   build:
     name: Build & Release
