--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "Bimbala" "\0"
+            VALUE "FileDescription", "bimbala" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "Bimbala" "\0"
+            VALUE "InternalName", "bimbala" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "Bimbala.exe" "\0"
-            VALUE "ProductName", "Bimbala" "\0"
+            VALUE "OriginalFilename", "bimbala.exe" "\0"
+            VALUE "ProductName", "bimbala" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
